--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "cd client && npm install",
     "clean": "rm -f app/assets/webpack/*"
   },
-  "cacheDirectories": ["client/node_modules"],
+  "cacheDirectories": ["node_modules", "client/node_modules"],
   "devDependencies": {
     "phantomjs": "2.1.7"
   }
