--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
   "license": "MIT",
   "engines": {
     "node": "5.10"
+  },
+  "scripts": {
+    "postinstall": "cd client && npm install",
+    "clean": "rm -f app/assets/webpack/*"
+  },
+  "cacheDirectories": ["client/node_modules"],
+  "devDependencies": {
+    "phantomjs": "2.1.7"
   }
 }
