--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "babel": "6.5.2",
-    "babel-cli": "6.7.5",
-    "babel-core": "6.7.6",
+    "babel-cli": "6.7.7",
+    "babel-core": "6.7.7",
     "babel-loader": "6.2.4",
     "babel-polyfill": "6.7.4",
     "babel-preset-es2015": "6.6.0",
@@ -33,30 +33,31 @@
     "file-loader": "0.8.5",
     "imports-loader": "0.6.5",
     "loader-utils": "0.2.14",
-    "lodash": "4.9.0",
+    "lodash": "4.11.1",
     "node-libs-browser": "1.0.0",
-    "node-sass": "3.4.2",
+    "node-sass": "3.5.1",
     "react": "0.14.8",
     "react-dom": "0.14.8",
     "react-on-rails": "5.2.0",
-    "react-redux": "4.4.2",
-    "redux": "3.4.0",
+    "react-redux": "4.4.5",
+    "redux": "3.5.1",
     "redux-thunk": "2.0.1",
     "resolve-url-loader": "1.4.3",
     "sass-loader": "3.2.0",
     "sass-resources-loader": "1.0.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.12.15"
+    "webpack": "1.13.0"
   },
   "devDependencies": {
-    "babel-eslint": "6.0.2",
+    "babel-eslint": "6.0.3",
     "babel-plugin-react-transform": "2.0.2",
     "body-parser": "1.15.0",
-    "eslint": "2.7.0",
-    "eslint-config-airbnb": "6.2.0",
+    "eslint": "2.8.0",
+    "eslint-config-airbnb": "7.0.0",
     "eslint-plugin-babel": "3.2.0",
     "eslint-plugin-react": "4.3.0",
+    "eslint-plugin-jsx-a11y": "0.6.2",
     "phantomjs-prebuilt": "2.1.7",
     "react-transform-hmr": "1.0.4",
     "webpack-dev-server": "1.14.1"
