Revert "Revert "Merge pull request #1918 from sharetribe/react-on-rails""
This reverts commit 104008db931410cc80f0e835b76505731bc817ee.

--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "license": "MIT",
   "engines": {
     "node": "5.10"
-  }
+  },
+  "scripts": {
+    "postinstall": "cd client && npm install",
+    "clean": "rm -f app/assets/webpack/*"
+  },
+  "cacheDirectories": ["node_modules", "client/node_modules"]
 }
