--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,12 @@ coverage/
 *.sock
 .vagrant
 .env
+
+# React on Rails
+npm-debug.log*
+node_modules
+client/node_modules
+
+# Generated js bundles
+/app/assets/webpack/*
+
