--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -15,11 +15,13 @@
     "mocha": true
   },
   "rules": {
+    "eqeqeq": [2, "allow-null"],
+
     "no-undef": 2,
     "no-unused-vars": [2, { "vars": "all", "args": "none" }],
 
     "indent": [1, 2, { "SwitchCase": 1, "VariableDeclarator": 2 }],
-    "id-length": [1, { "min": 2, "exceptions": ["_", "e", "i", "k", "v"] }],
+    "id-length": [1, { "min": 2, "exceptions": ["_", "e", "i", "k", "v", "t"] }],
 
     "jsx-quotes": [1, "prefer-double"],
     "react/display-name": 0,
