Use I18n-js to export translation bundle

--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,8 @@
     "sass-resources-loader": "1.0.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.13.0"
+    "webpack": "1.13.0",
+    "i18n-js": "http://github.com/fnando/i18n-js/archive/v3.0.0.rc12.tar.gz"
   },
   "devDependencies": {
     "babel-eslint": "6.0.4",
