--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ client/node_modules
 # Generated js bundles
 /app/assets/webpack/*
 
+# Generated i18n-js bundles
+/app/assets/javascripts/i18n/*
+/client/app/i18n/*
