Rename Webpack config files

--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,12 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "build:client": "webpack --config webpack.client.rails.build.config.js",
-    "build:server": "webpack --config webpack.server.rails.build.config.js",
-    "build:production:client": "NODE_ENV=production webpack --config webpack.client.rails.build.config.js",
-    "build:production:server": "NODE_ENV=production webpack --config webpack.server.rails.build.config.js",
-    "build:dev:client": "webpack -w --config webpack.client.rails.build.config.js",
-    "build:dev:server": "webpack -w --config webpack.server.rails.build.config.js",
+    "build:client": "webpack --config webpack.client.config.js",
+    "build:server": "webpack --config webpack.server.config.js",
+    "build:production:client": "NODE_ENV=production webpack --config webpack.client.config.js",
+    "build:production:server": "NODE_ENV=production webpack --config webpack.server.config.js",
+    "build:dev:client": "webpack -w --config webpack.client.config.js",
+    "build:dev:server": "webpack -w --config webpack.server.config.js",
     "hot-assets": "babel-node server-rails-hot.js",
     "print-phantomjs-version": "phantomjs --version",
     "start-phantomjs": "phantomjs --webdriver=8910",
