--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,8 @@
     "node-libs-browser": "1.0.0",
     "node-sass": "3.7.0",
     "postcss-loader": "0.9.1",
+    "postcss-cssnext": "2.5.2",
+    "postcss-mixins": "4.0.1",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-on-rails": "5.2.0",
