--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
     "babel-runtime": "6.9.0",
+    "classnames": "2.2.5",
     "css-loader": "0.23.1",
     "es5-shim": "4.5.8",
     "es6-promise": "3.2.1",
