--- a/client/package.json
+++ b/client/package.json
@@ -56,7 +56,8 @@
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
-    "i18n-js": "http://github.com/sharetribe/i18n-js/archive/interpolation-mode.tar.gz"
+    "i18n-js": "http://github.com/sharetribe/i18n-js/archive/interpolation-mode.tar.gz",
+    "customfile-loader": "./customloaders/customfileloader"
   },
   "devDependencies": {
     "@kadira/storybook": "1.27.0",
