--- a/client/customloaders/customfileloader/package.json
+++ b/client/customloaders/customfileloader/package.json
@@ -6,10 +6,10 @@
     "index.js"
   ],
   "dependencies": {
-    "bluebird": "^2.10.2",
-    "fs-extra": "^0.30.0",
-    "loader-utils": "~0.2.5",
-    "mime": "~1.3.4"
+    "bluebird": "2.10.2",
+    "fs-extra": "0.30.0",
+    "loader-utils": "0.2.5",
+    "mime": "1.3.4"
   },
   "main": "index.js",
   "license": "MIT"
