--- a/config/config.defaults.yml
+++ b/config/config.defaults.yml
@@ -301,6 +301,9 @@ default: &default_settings
   # development and false for other environments.
   use_js_routes_middleware: false
 
+  # Custom landing page asset host, e.g. https://s3.amazonaws.com/my-bucket/sites
+  clp_asset_host:
+
 production: &production_settings
   <<: *default_settings
 
