--- a/config/config.defaults.yml
+++ b/config/config.defaults.yml
@@ -6,7 +6,7 @@ default: &default_settings
   # NOTE: Do not include http(s) here, or subdomains, just the top level domain, like "sharetribe.com" for example
   domain: "codingstack.com:3000"
   
-  va_url: http://still-ridge-7153.herokuapp.com/
+  va_url: http://still-ridge-7153.herokuapp.com
   
   # If you want to make logins work across different subdomains you should put here the domain where you are running Sharetribe.
   # practically in most cases the same value as in "domain:"
